Task #6269 - API for formatting messages.
Continue coding/testing the Ring statistics message sending
API.  Note that the only thing left is to be able to
send the consumer statistics.  Otherwise all is well.

--- a/main/servers/status/Makefile.am
+++ b/main/servers/status/Makefile.am
@@ -1,9 +1,9 @@
 lib_LTLIBRARIES = libStatusMessages.la
 
-COMPILATION_FLAGS=
-COMMON_LIBS      = @ZMQ_LDFLAGS@
+COMPILATION_FLAGS= -I@top_srcdir@/base/os
+COMMON_LIBS      = @top_builddir@/base/os/libdaqshm.la  @ZMQ_LDFLAGS@ @LIBEXCEPTION_LDFLAGS@
 
-libStatusMessages_la_SOURCES=CStatusMessage.cpp
+libStatusMessages_la_SOURCES=Constants.cpp CStatusMessage.cpp
 libStatusMessages_la_CPPFLAGS = $(COMPILATION_FLAGS)
 libStatusMessages_la_LDFLAGS  = $(COMMON_LIBS)
 
