Add template for logmsgtests.cpp - tests for LogMessage inner class.

--- a/main/servers/status/Makefile.am
+++ b/main/servers/status/Makefile.am
@@ -23,7 +23,8 @@ noinst_PROGRAMS=$(TEST_PROGS)
 
 
 ringstattests_SOURCES=TestRunner.cpp Asserts.h ringstattests.cpp \
-	readoutstattests.cpp
+	readoutstattests.cpp logmsgtests.cpp
+
 ringstattests_CPPFLAGS=$(COMPILATION_FLAGS) @CPPUNIT_CFLAGS@
 ringstattests_LDFLAGS=libStatusMessages.la $(COMMON_LIBS) @CPPUNIT_LDFLAGS@
 
