--- a/main/servers/status/Makefile.am
+++ b/main/servers/status/Makefile.am
@@ -18,7 +18,9 @@ include_HEADERS = CStatusMessage.h
 
 #--------------------Tcl Bindings:
 
-libTclStatusMessages_la_SOURCES= TclPackage.cpp
+libTclStatusMessages_la_SOURCES= TclPackage.cpp \
+	CTCLRingStatisics.cpp CTCLRingStatistics.h
+
 libTclStatusMessages_la_CPPFLAGS=$(COMPILATION_FLAGS) @TCL_FLAGS@ @LIBTCLPLUS_CFLAGS@
 libTclStatusMessages_la_LDFLAGS=$(COMMON_LIBS)  	\
 				@builddir@/libStatusMessages.la   \
