Ensure that tcl tests know where TclLibPath is.

--- a/main/servers/status/Makefile.am
+++ b/main/servers/status/Makefile.am
@@ -49,7 +49,8 @@ ringstattests_CPPFLAGS=$(COMPILATION_FLAGS) @CPPUNIT_CFLAGS@
 ringstattests_LDFLAGS=libStatusMessages.la $(COMMON_LIBS) @CPPUNIT_LDFLAGS@
 
 tclpkgtests_SOURCES = TestRunner.cpp Asserts.h
-tclpkgtests_CPPFLAGS=$(COMPILATION_FLAGS) @CPPUNIT_CFLAGS@ @LIBTCLPLUS_CFLAGS@ @TCL_FLAGS@
+tclpkgtests_CPPFLAGS=$(COMPILATION_FLAGS) @CPPUNIT_CFLAGS@ @LIBTCLPLUS_CFLAGS@ @TCL_FLAGS@ \
+					-DTCLLIBPATH="@prefix@/TclLibs"
 tclpkgtests_LDFLAGS=$(COMMON_LIBS) @LIBTCLPLUS_LDFLAGS@ @TCL_LDFLAGS@ @CPPUNIT_LDFLAGS@
 
 TESTS=$(TEST_PROGS)
