--- a/main/servers/status/Makefile.am
+++ b/main/servers/status/Makefile.am
@@ -51,7 +51,9 @@ ringstattests_LDFLAGS=libStatusMessages.la $(COMMON_LIBS) @CPPUNIT_LDFLAGS@
 tclpkgtests_SOURCES = TestRunner.cpp Asserts.h pkgloads.cpp tclringstatustests.cpp
 tclpkgtests_CPPFLAGS=$(COMPILATION_FLAGS) @CPPUNIT_CFLAGS@ @LIBTCLPLUS_CFLAGS@ @TCL_FLAGS@ \
 					-DTCLLIBPATH="\"@prefix@/TclLibs\""
-tclpkgtests_LDFLAGS=$(COMMON_LIBS) @LIBTCLPLUS_LDFLAGS@ @TCL_LDFLAGS@ @CPPUNIT_LDFLAGS@
+tclpkgtests_LDFLAGS=$(COMMON_LIBS) libTclStatusMessages_la-CTCLRingStatistics.lo \
+		libStatusMessages.la	\
+		@LIBTCLPLUS_LDFLAGS@ @TCL_LDFLAGS@ @CPPUNIT_LDFLAGS@
 
 TESTS=$(TEST_PROGS)
 
