* Factor some useful functions out into testutils. * Reflect that factoring in ringstattests.cpp * Add tests for both producer and consumer message segments to   tclringstatustests.cpp

--- a/main/servers/status/Makefile.am
+++ b/main/servers/status/Makefile.am
@@ -43,12 +43,13 @@ noinst_PROGRAMS=$(TEST_PROGS)
 
 
 ringstattests_SOURCES=TestRunner.cpp Asserts.h ringstattests.cpp \
-	readoutstattests.cpp logmsgtests.cpp statemsgtests.cpp
+	readoutstattests.cpp logmsgtests.cpp statemsgtests.cpp testutils.cpp testutils.h
 
 ringstattests_CPPFLAGS=$(COMPILATION_FLAGS) @CPPUNIT_CFLAGS@
 ringstattests_LDFLAGS=libStatusMessages.la $(COMMON_LIBS) @CPPUNIT_LDFLAGS@
 
-tclpkgtests_SOURCES = TestRunner.cpp Asserts.h pkgloads.cpp tclringstatustests.cpp
+tclpkgtests_SOURCES = TestRunner.cpp Asserts.h pkgloads.cpp tclringstatustests.cpp \
+	testutils.cpp testutils.h
 tclpkgtests_CPPFLAGS=$(COMPILATION_FLAGS) @CPPUNIT_CFLAGS@ @LIBTCLPLUS_CFLAGS@ @TCL_FLAGS@ \
 					-DTCLLIBPATH="\"@prefix@/TclLibs\""
 tclpkgtests_LDFLAGS=$(COMMON_LIBS) libTclStatusMessages_la-CTCLRingStatistics.lo \
