--- a/main/servers/status/Makefile.am
+++ b/main/servers/status/Makefile.am
@@ -19,7 +19,8 @@ include_HEADERS = CStatusMessage.h
 #--------------------Tcl Bindings:
 
 libTclStatusMessages_la_SOURCES= TclPackage.cpp \
-	CTCLRingStatistics.cpp CTCLRingStatistics.h
+	CTCLRingStatistics.cpp CTCLRingStatistics.h \
+	CTCLReadoutStatistics.cpp CTCLReadoutStatistics.h
 
 libTclStatusMessages_la_CPPFLAGS=$(COMPILATION_FLAGS) @TCL_FLAGS@ @LIBTCLPLUS_CFLAGS@
 libTclStatusMessages_la_LDFLAGS=$(COMMON_LIBS)  	\
