Add/build/link template test module for testing the CTCLLogMessage and its encpaulsted class.

--- a/main/servers/status/Makefile.am
+++ b/main/servers/status/Makefile.am
@@ -50,8 +50,10 @@ ringstattests_SOURCES=TestRunner.cpp Asserts.h ringstattests.cpp \
 ringstattests_CPPFLAGS=$(COMPILATION_FLAGS) @CPPUNIT_CFLAGS@
 ringstattests_LDFLAGS=libStatusMessages.la $(COMMON_LIBS) @CPPUNIT_LDFLAGS@
 
-tclpkgtests_SOURCES = TestRunner.cpp Asserts.h pkgloads.cpp tclringstatustests.cpp \
-	testutils.cpp testutils.h tclreadoutstatustests.cpp
+tclpkgtests_SOURCES = TestRunner.cpp Asserts.h pkgloads.cpp \
+	tclringstatustests.cpp testutils.cpp testutils.h \
+	tclreadoutstatustests.cpp tcllogmsgtests.cpp
+
 tclpkgtests_CPPFLAGS=$(COMPILATION_FLAGS) @CPPUNIT_CFLAGS@ @LIBTCLPLUS_CFLAGS@ @TCL_FLAGS@ \
 					-DTCLLIBPATH="\"@prefix@/TclLibs\""
 tclpkgtests_LDFLAGS=$(COMMON_LIBS) libTclStatusMessages.la \
