Add CTCLStageChangeMessage to the class build.  Get a good compilation of its header.

--- a/main/servers/status/Makefile.am
+++ b/main/servers/status/Makefile.am
@@ -21,7 +21,8 @@ include_HEADERS = CStatusMessage.h
 libTclStatusMessages_la_SOURCES= TclPackage.cpp \
 	CTCLRingStatistics.cpp CTCLRingStatistics.h \
 	CTCLReadoutStatistics.cpp CTCLReadoutStatistics.h \
-	CTCLLogMessage.cpp CTCLLogMessage.h
+	CTCLLogMessage.cpp CTCLLogMessage.h		\
+	CTCLStateChangeMessage.cpp CTCLStateChangeMessage.h
 
 libTclStatusMessages_la_CPPFLAGS=$(COMPILATION_FLAGS) @TCL_FLAGS@ @LIBTCLPLUS_CFLAGS@
 libTclStatusMessages_la_LDFLAGS=$(COMMON_LIBS)  	\
