* Good compilation of CTCLStateChangeMessage implementation. * Added 'StateChange' command to the package. * Added template tests for the command to the test suite.

--- a/main/servers/status/Makefile.am
+++ b/main/servers/status/Makefile.am
@@ -53,7 +53,7 @@ ringstattests_LDFLAGS=libStatusMessages.la $(COMMON_LIBS) @CPPUNIT_LDFLAGS@
 
 tclpkgtests_SOURCES = TestRunner.cpp Asserts.h pkgloads.cpp \
 	tclringstatustests.cpp testutils.cpp testutils.h \
-	tclreadoutstatustests.cpp tcllogmsgtests.cpp
+	tclreadoutstatustests.cpp tcllogmsgtests.cpp tclstatemsgtests.cpp
 
 tclpkgtests_CPPFLAGS=$(COMPILATION_FLAGS) @CPPUNIT_CFLAGS@ @LIBTCLPLUS_CFLAGS@ @TCL_FLAGS@ \
 					-DTCLLIBPATH="\"@prefix@/TclLibs\""
