*  Ensure that the python test scripts make it into the distribution tarball. *  In ringstatisticstest.py use different ports for each test to avoids the linger    problem that's evidently happening in wheezy tests.

--- a/main/servers/status/Makefile.am
+++ b/main/servers/status/Makefile.am
@@ -85,3 +85,7 @@ TESTS=$(TEST_PROGS) $(PYTHON_TESTS)
 
 
 install-exec-hook: tclpkgInstall pypkgInstall
+
+#  Ensure stuff makes it into the tarball:
+
+EXTRA_DIST = $(PYTHON_TESTS)
