Task #6269 - Emit status messages (Python bindings)
Complete coding, testing of the Python wrapper for the
CStatusDefinitions::ReadoutStatistics

--- a/main/servers/status/Makefile.am
+++ b/main/servers/status/Makefile.am
@@ -58,7 +58,8 @@ PY_LOG_COMPILER=@PYTHON@
 TESTS_ENVIRONMENT=PYTHONPATH=@prefix@/pythonLibs; export PYTHONPATH;
 
 
-PYTHON_TESTS=ringstatisticstests.py
+PYTHON_TESTS=ringstatisticstests.py readoutstatisticstests.py
+
 
 TEST_PROGS=ringstattests tclpkgtests
 
