--- a/main/servers/status/Makefile.am
+++ b/main/servers/status/Makefile.am
@@ -58,7 +58,9 @@ PY_LOG_COMPILER=@PYTHON@
 TESTS_ENVIRONMENT=PYTHONPATH=@prefix@/pythonLibs; export PYTHONPATH;
 
 
-PYTHON_TESTS=ringstatisticstests.py readoutstatisticstests.py
+PYTHON_TESTS=ringstatisticstests.py readoutstatisticstests.py \
+	logmessagestests.py
+
 
 
 TEST_PROGS=ringstattests tclpkgtests
