Task #6224  Subscription API for statistics etc.
Got an initial compile on the subscribe part of this.

--- a/main/servers/status/Makefile.am
+++ b/main/servers/status/Makefile.am
@@ -8,7 +8,9 @@ libStatusMessages_la_SOURCES=Constants.cpp \
 	CReadoutStatistics.cpp \
 	CStatusDefinitions.cpp \
 	LogMessage.cpp		\
-	StateChange.cpp
+	StateChange.cpp		\
+	CStatusSubscription.cpp CStatusSubscription.h
+
 
 
 libStatusMessages_la_CPPFLAGS = $(COMPILATION_FLAGS)
