Add template files for Tcl bindings to the status subscriptions class (CStatusSubscription).

--- a/main/servers/status/Makefile.am
+++ b/main/servers/status/Makefile.am
@@ -20,12 +20,13 @@ include_HEADERS = CStatusMessage.h
 
 #--------------------Tcl Bindings:
 
-libTclStatusMessages_la_SOURCES= TclPackage.cpp \
-	CTCLRingStatistics.cpp CTCLRingStatistics.h \
-	CTCLReadoutStatistics.cpp CTCLReadoutStatistics.h \
-	CTCLLogMessage.cpp CTCLLogMessage.h		\
+libTclStatusMessages_la_SOURCES= TclPackage.cpp             \
+	CTCLRingStatistics.cpp CTCLRingStatistics.h         \
+	CTCLReadoutStatistics.cpp CTCLReadoutStatistics.h   \
+	CTCLLogMessage.cpp CTCLLogMessage.h		    \
 	CTCLStateChangeMessage.cpp CTCLStateChangeMessage.h \
-	TclUtilities.cpp TclUtilities.h
+	CTCLSubscriptions.cpp CTCLSubscriptions.h             \
+	TclUtilities.cpp TclUtilities.h 
 
 libTclStatusMessages_la_CPPFLAGS=$(COMPILATION_FLAGS) @TCL_FLAGS@ @LIBTCLPLUS_CFLAGS@
 libTclStatusMessages_la_LDFLAGS=$(COMMON_LIBS)  	\
