Change the connection/binding policy: *   In Normal mode we push at an aggregator which then PUBS the aggregated     messages. *   In Testing mode, we are allowing the SUB to test against us without     an aggregator in the middle.  In that mode, we PUSH to the advertised     aggregation service.

--- a/main/servers/status/Makefile.am
+++ b/main/servers/status/Makefile.am
@@ -95,7 +95,7 @@ subtests_SOURCES=TestRunner.cpp subtest.cpp
 subtests_CPPFLAGS=$(COMPILATION_FLAGS) @CPPUNIT_CFLAGS@
 subtests_LDFLAGS=libStatusMessages.la $(COMMON_LIBS) @CPPUNIT_LDFLAGS@
 
-TESTS=$(TEST_PROGS) $(PYTHON_TESTS) $(TCL_TESTS)
+TESTS=$(TEST_PROGS) $(PYTHON_TESTS)
 
 
 install-exec-hook: tclpkgInstall pypkgInstall
