*  Good compile on python module after adding status subscription wrapper. *  Added empty test for the wrapper above and added to Makefile.am.

--- a/main/servers/status/Makefile.am
+++ b/main/servers/status/Makefile.am
@@ -64,7 +64,7 @@ TESTS_ENVIRONMENT=PYTHONPATH=@prefix@/pythonLibs; export PYTHONPATH;\
 
 
 PYTHON_TESTS=ringstatisticstests.py readoutstatisticstests.py \
-	logmessagestests.py statemessagetests.py
+	logmessagestests.py statemessagetests.py statussub.py
 
 
 TCL_TESTS=statussubtest.test
