*  Create diagnostics directory *  Move serversw/status into diagnostics because it depends on dataflow which is built _after_ servers.

--- a/main/configure.ac
+++ b/main/configure.ac
@@ -427,7 +427,8 @@ AC_CONFIG_FILES([Makefile
 		 servers/Makefile
 		 servers/tclserver/Makefile
                  servers/portmanager/Makefile
-		 servers/status/Makefile
+		 diagnostics/Makefile
+		 diagnostics/status/Makefile
 		 utilities/Makefile
 		utilities/common/Makefile
 		 utilities/Buffer/Makefile
