Ensure that the status daemon gets the headers for CRingBuffer and the dataflow libraries.

--- a/main/diagnostics/status/Makefile.am
+++ b/main/diagnostics/status/Makefile.am
@@ -1,4 +1,4 @@
-bin_PROGRAMS = ringstatusdaemon
+bin_PROGRAMS = ringstatusdaemon statusaggregator
 
 lib_LTLIBRARIES = libStatusMessages.la libTclStatusMessages.la libPyStatusMessages.la
 
@@ -29,9 +29,10 @@ include_HEADERS = CStatusMessage.h CPublishRingStatistics.h
 ringstatusdaemon_SOURCES  = ringStatusDaemon.cpp \
 	CRingStatusDaemon.cpp CRingStatusDaemon.h
 
-ringstatusdaemon_CPPFLAGS = -I@top_srcdir@/servers/portmanager @LIBTCLPLUS_CFLAGS@
+ringstatusdaemon_CPPFLAGS = -I@top_srcdir@/servers/portmanager @LIBTCLPLUS_CFLAGS@ \
+	-I@top_srcdir@/base/dataflow
 ringstatusdaemon_LDFLAGS  = @top_builddir@/servers/portmanager/libPortManager.la \
-	@builddir@/libStatusMessages.la						\
+	@builddir@/libStatusMessages.la	@top_builddir@/base/dataflow/libDataFlow.la \
 	@LIBEXCEPTION_LDFLAGS@
 
 nodist_ringstatusdaemon_SOURCES = ringstatus.c ringstatus.h
@@ -43,6 +44,14 @@ ringstatus.c: ringstatus.h
 
 ringstatus.h: ringstatus.ggo
 	$(GENGETOPT) --output-dir=@builddir@ --input=ringstatus.ggo -F ringstatus
+
+#---------------  status aggregator:
+
+statusaggregator_SOURCES  = statusaggregator.cpp
+statusaggregator_CPPFLAGS = -I@top_srcdir@/servers/portmanager @LIBTCLPLUS_CFLAGS@
+statusaggregator_LDFLAGS  =  @top_builddir@/servers/portmanager/libPortManager.la \
+	@builddir@/libStatusMessages.la						  \
+	@LIBEXCEPTION_LDFLAGS@
 
 #--------------------Tcl Bindings:
 
