--- a/main/nscldaq.in
+++ b/main/nscldaq.in
@@ -90,6 +90,7 @@ stop_ringmaster() {
 }
 
 start_statusaggregator() {
+    sleep 2
     /sbin/start-stop-daemon --start \
 			    --quiet \
 			    --pidfile=${AGGREGATORPIDFILE} \
@@ -106,6 +107,7 @@ stop_statusaggregator() {
 }
 
 start_ringstatdaemon() {
+    sleep 2
     /sbin/start-stop-daemon --start \
 			    --quiet \
 			    --pidfile=${RINGSTATSPIDFILE} \
